<resources>
    <string name="app_name">EpicWorld</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="all_ok">OK</string>
    <string name="all_back_button">Back Button</string>
    <string name="all_clear_button">Clear Button</string>
    <string name="all_generic_error">There was an error. Please try again later</string>
    <string name="all_star_rating">Star Rating</string>
    <string name="all_game_image_description">Game Image</string>
    <string name="home_app_bar_search_description">Search</string>
    <string name="home_app_bar_filter_description">Filter Results</string>
    <string name="home_app_bar_title">Epic World</string>
    <string name="home_screen_error_message">There was an error. We are terribly sorry!</string>
    <string name="home_screen_scroll_error">Not able to get more results. Please try later.</string>
    <string name="home_screen_retry">Retry</string>
    <string name="game_details_invalid_game_id">Sorry cannot get details of this game</string>
    <string name="game_details_screenshots">Game Screenshots</string>
    <string name="game_details_play_trailer">Play Trailer</string>
    <string name="game_details_released">Released</string>
    <string name="game_details_rating">Rating</string>
    <string name="game_details_calendar_date">Calendar Date</string>
    <string name="game_details_about">About</string>
    <string name="game_details_about_show_more">Show More</string>
    <string name="game_details_about_show_less">Show Less</string>
    <string name="game_details_platforms">Platforms</string>
    <string name="game_details_stores">Stores</string>
    <string name="game_details_developer">Developer</string>
    <string name="game_details_publisher">Publisher</string>
    <string name="game_videos_invalid_game_id">Sorry cannot get videos of this game</string>
    <string name="game_videos_no_videos">Sorry there are no videos available for this game.</string>
    <string name="game_videos_trailer">Game Trailer</string>
    <string name="game_videos_play">Play Game Trailer</string>
    <string name="game_videos_now_playing">Now Playing</string>
    <string name="game_search_suggestion">Search here…</string>
    <string name="game_search_no_matches">No matching results</string>
    <string name="toggle_full_screen">Toggle full screen</string>
    <string name="play_previous">Play previous</string>
    <string name="play_next">Play next</string>
    <string name="toggle_play">Toggle play/pause</string>
    <string name="rewind_5">Rewind 5 secs</string>
    <string name="forward_10">Forward 10 secs</string>
</resources>