...
}

@Preview(showBackground = true)
@Composable
private fun GameItemPreview() {
    GameItem(
        game = GameResultEntity(123, "Max Payne", "", 4.5),
        gameClick = {  }
    )
}
